# KitPass

./: .gitignore  CONTRIBUTING.md  Kitpass.spec  README.md  ROADMAP.md  buildozer.spec  data_manager.py  generator.py  login.py  main.py  pyproject.toml  requirements.tkt  requirements.txt
app/: __init__.py  routes.py
app/components/: __init__.py
app/controllers/: __init__.py
app/models/: __ini__.py
app/pages/: __init__.py  counter.py
app/screens/: generator.py
app/services/: __init__.py
app/utils/: password.py
specs/android/: buildozer.spec
specs/windows/: Kitpass.spec
src/: main.py  routes.py
src/screens/: generator.py  login.py
src/utils/: data_manager.py
