[project]
name = "KitPass"
version = "0.1.0"
description = "KitPass is a 100% open-source password manager designed to ensure the security and privacy of your data. All passwords are stored locally on your device, and the app operates entirely offline for complete peace of mind."
readme = "README.md"
requires-python = "==3.12"
authors = [
    { name = "Edoardo Nasuto", email = "edoardo.nasuto@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "fletxr==0.1.4.dev1",
  "cryptography==41.0.4",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "KitPass"

# company name to display in about app dialogs
company = "KitPass"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Edoardo Nasuto"

[tool.flet.app]
path = ""

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}